introduce lvh to avoid address bar caused layout crash on mobile

--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -1,5 +1,5 @@
 .card {
-    height: 70vh;
+    height: calc(var(--vh) * 70);
     width: 25vw;
     display: grid;
     grid-template-rows: 1fr auto;
@@ -49,9 +49,9 @@
 
 @media (max-width: 768px) {
     .card {
-        margin-bottom: calc(5vh + 64px);
+        margin-bottom: calc(calc(var(--vh) * 5) + 64px);
         width: 85vw;
-        height: 40vh;
+        height: calc(var(--vh) * 40);
     }
 
     .price {
